src/test/deca/codegen/valid/result/test_methode_attribut_selection_output.res
1
Error: La méthode code.A.m1 doit retourner un element
