src/test/deca/codegen/invalid/result/test_no_return_output.res
Error: La méthode code.A.f doit retourner un element
